# 500-01-de-zoomcamp-2k24-labs

./: .gitignore  Makefile  dev-localenv.env  pyproject.toml
04-docker/: mod01-lab01-docker-compose.yaml
05-terraform/mod01-lab01-tf-gcp-demo/: main.tf  variables.tf
06-ipynb/: wk01-lab-exercise-submission.ipynb  wk02-lab-exercise-submission.ipynb
de-zcamp/10-wkly-labs/01-mod01-prerequisite/: cli_01_dpipe_nyc_green_tripdata_to_localdb.py  cli_02_dpipe_nyc_taxi_zone_lookup_to_localdb.py  dpipe_io_source.py  dpipe_io_sql_store.py
de-zcamp/10-wkly-labs/02-mod02-mage-etl-demo/: io_config.yaml  metadata.yaml
de-zcamp/10-wkly-labs/02-mod02-mage-etl-demo/data_exporters/: export_to_gcs.py  export_to_postgres.py
de-zcamp/10-wkly-labs/02-mod02-mage-etl-demo/data_loaders/: load_data_from_gcs.py  load_green_tripdata_data_2020_q3.py
de-zcamp/10-wkly-labs/02-mod02-mage-etl-demo/pipelines/green_taxi_etl/: metadata.yaml
de-zcamp/10-wkly-labs/02-mod02-mage-etl-demo/pipelines/green_taxi_etl_2_gcs_bq/: metadata.yaml
de-zcamp/10-wkly-labs/02-mod02-mage-etl-demo/transformers/: preprocess_green_tripdata.py
de-zcamp/10-wkly-labs/03-mod03-data-warehouse/: bq-demo-01.sql  cli_01_etl_extract_nyc_2022_green_tlc_trip_record_data_parquet_to_bucket.py
de-zcamp/10-wkly-labs/04-wsp01-dlt/: dlt-demo02-01-data-normalizing.py  dlt-hw-01.py
de-zcamp/10-wkly-labs/06-mod05-batch-processing/assign01-fhv-oct-2019/: download-nyc-trip-data.sh  etl-01-fhv-oct-2019.ipynb
